--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p>The emotional response (C - red section) is the lowest of the four which can be both good and bad. The good side is that I am not likely to be led by emotion in my thinking, it will likely be more logical. The downside is that I may potentially offend someone as I make not be considering emotional aspects in my thought process.</p>
 <p>As shown in section B (green area), there is room for improvement in my organisation and planning. I do plan and organise tasks but I think I often put more focus on what I am doing at the time instead of thinking or planning ahead.</p>
 
-<p>The results of these three tests show that I am very hands on, have a high level of creativity and am not overly impacted when under pressure. From the results I think there are areas I could work on such as potentially being stubborn and stuck in my ways or not being empathetic enough. Based off these results I think it shows that I can work well in a team setting as I have good problem-solving skills and like to get in and do things. I think I would be able to fill any role within a team quite easily.<p>
+<p>The results of these three tests show that I am very hands on, have a high level of creativity and am not overly impacted when under pressure. From the results I think there are areas I could work on such as potentially being stubborn and stuck in my ways or not being empathetic enough. Based off these results I think it shows that I can work well in a team setting as I have good problem-solving skills and like to get in and do things. I think I would be able to fill any role within a team quite easily.</p>
 
 
 
