--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 
 
-<p>David Lardner<p>
-<p>s3971040<p>
-<p>GitHub Public Repository URL<p>
-<p>GitHub Pages URL<p>
+<p>David Lardner</p>
+<p>s3971040</p>
+<p>GitHub Public Repository URL</p>
+<p>GitHub Pages URL</p>
 
 
 
