--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
 
 <p>David Lardner</p>
-<p>s3971040</p>
-<p>GitHub Public Repository URL</p>
-<p>GitHub Pages URL</p>
+<p>Student ID: s3971040</p>
+<p>Student email: s3971040@student.rmit.edu.au</p>
+<p>GitHub Public Repository URL: https://github.com/DaveL-ClassE/Assignment-1.git</p>
+<p>GitHub Pages URL: https://davel-classe.github.io/Assignment-1/</p>
 
 
 
