--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>IIT - 3.0.0 Assessment Task 1: My Profile</title>
 
   <link rel="stylesheet" href="styles/styles.css">
-
-
 
 </head>
 <body>
 
 
-  <p>David Lardner<br>
+  <p><img src="images/Me.JPG" alt="Me" width="200" id="me"/> David Lardner<br>
   Student ID: s3971040<br>
   Student email: s3971040@student.rmit.edu.au<br>
-  GitHub Public Repository URL: https://github.com/DaveL-ClassE/Assignment-1.git<br>
-  GitHub Pages URL: https://davel-classe.github.io/Assignment-1/ <img src="images/Me.JPG" alt="Me" width="200" id="me"/> </P>
+  GitHub Public Repository URL: <a href="https://github.com/DaveL-ClassE/Assignment-1.git" target="_blank">https://github.com/DaveL-ClassE/Assignment-1.git</a><br>
+  GitHub Pages URL: <a href="https://davel-classe.github.io/Assignment-1/" target="_blank">https://davel-classe.github.io/Assignment-1/</a></P>
 
 
 
