--- a/Job.html
+++ b/Job.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-  background-image: url('images/gray and white.jpg');
+  background-image: url('images/1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -18,17 +18,18 @@ body {
 </head>
 <body>
 
-  <p>Navigation</p>
-  <p> <a href="index.html">Home Page</a></p>
-  <p> <a href="Profile.html">My Profile</a></p>
-  <p> <a href="Job.html">My Ideal Job</a></p>
-  <p> <a href="Personality.html">My Personality Tests</a></p>
-  <p> <a href="Project.html">My Project Idea</a></p>
-  <p> <a href="References.html">References</a></p>
+  <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="Profile.html">My Profile</a></li>
+    <li><a href="Job.html">My Ideal Job</a></li>
+    <li><a href="Personality.html">My Personality Tests</a></li>
+    <li><a href="Project.html">My Project Idea</a></li>
+    <li><a href="References.html">References</a></li>
+  <ul>
 
 <h1>Ideal Job</h1>
-  <p><img src="images/Job Ad.jpg" alt="job Advertisement" width="1000" id="ad"/></p>
-  <p><a href="https://www.seek.com.au/job/58423035?type=standard#sol=7b3b9d3dc61dd3925d571428ff0d7ea281b24836">Job Advertisement link</a> </p>
+  <p><img src="images/Job Ad.jpg" alt="job Advertisement" width="800" id="ad"/></p>
+  <p><a href="https://www.seek.com.au/job/58423035?type=standard#sol=7b3b9d3dc61dd3925d571428ff0d7ea281b24836" target="_blank">Job Advertisement link</a> </p>
   <p>A job I think that I would like to one day pursue would be a system administrator. There is a lot involved in the role but it entails quite a lot of different aspects of the IT industry which is what I think I like about it. It involves managing and maintaining things such as networks and hardware, installing or configuring hardware and/or software, some troubleshooting/tech support and looking after things like making sure everything is backed up. This is the kind of work I think I would enjoy doing.</p>
   <p>I enjoy the fact that this role could also be quite different each day depending on what is happening. Because you do so many different things you wouldn’t get bored just doing the same task over and over. Another advantage of this role is that you would gain a good knowledge across a lot of aspects of IT so I could potentially move into another more specialised role if I decided that I wanted a change.</p>
   <p>A system administrator role requires experience so it’s not something you could really walk into after completing a Bachelor of Information Technology. It would also require several years in the industry to gain practical experience doing these kinds of things.</p>
