--- a/Personality.html
+++ b/Personality.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-  background-image: url('images/gray and white.jpg');
+  background-image: url('images/1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -18,30 +18,37 @@ body {
 </head>
 <body>
 
-  <p>Navigation</p>
-  <p> <a href="index.html">Home Page</a></p>
-  <p> <a href="Profile.html">My Profile</a></p>
-  <p> <a href="Job.html">My Ideal Job</a></p>
-  <p> <a href="Personality.html">My Personality Tests</a></p>
-  <p> <a href="Project.html">My Project Idea</a></p>
-  <p> <a href="References.html">References</a></p>
+  <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="Profile.html">My Profile</a></li>
+    <li><a href="Job.html">My Ideal Job</a></li>
+    <li><a href="Personality.html">My Personality Tests</a></li>
+    <li><a href="Project.html">My Project Idea</a></li>
+    <li><a href="References.html">References</a></li>
+  <ul>
 
   <h1>Personality Tests</h1>
-    <h3>1.	A Myer-Briggs test</h3>
-    <p><img src="images/Personality Test.jpg" alt="Myer-Briggs Test Result" width="1000"/></p>
+    <h3>1.	Myer-Briggs test</h3>
+    <p><img src="images/Personality Test.jpg" alt="Myer-Briggs Test Result" width="700" id="myer"/></p>
     <p>My personality type is a Virtuoso ISTP-T. This personality type is very hands on and visual when it comes to things. They are often creative, great in a crisis and optimistic, however they can also be stubborn and easily bored. Virtuosos are also good problem-solvers. I think this is fairly accurate representation of myself. I do prefer to actually do something instead of just read about it and I often come up with weird and wonderful solutions to problems at work. One thing this does highlight is that I am more introverted than extroverted, which is not necessarily a bad thing, but it does have room for improvement.</p>
+    <br/>
+    <br/>
 
-    <h3>2.	A learning styles test</h3>
-    <p><img src="images/Learning style results.jpg" alt="Learning Styles Test Result" width="1000"/></p>
+    <h3>2.	Learning Styles test</h3>
+    <p><img src="images/Learning style results.jpg" alt="Learning Styles Test Result" width="500" id="learn"/></p>
     <p>This test shows that I learn better by doing things and being hands on. This accounts for 40% in the graph. My visual and auditory learning skill are on the same level according to the results (both at 30%) but personally I think that I would lean more towards visual leaning than auditory as seeing how something is done is close to physically doing it. My auditory and visual results combined make up 60% which is a good thing as doing my studies online both of these are the main way I will be getting my information.</p>
+    <br/>
+    <br/>
 
     <h3>3.	The Herman Brain Dominance Instrument (HBDI) profile</h3>
-    <p><img src="images/HBDI Thinking Profile.jpg" alt="HBDI Test Result" width="1000"/></p>
-    <p>The HBDI test is designed to identify your thinking preferences. These two graphs show my thinking style normally (left graph) and under pressure (dotted line on right graph). There is very little difference between the results when under pressure or thinking normally which indicates that my thought process or thinking style is not overly impacted by being under pressure.</p>
-    <p>The emotional response (C - red section) is the lowest of the four which can be both good and bad. The good side is that I am not likely to be led by emotion in my thinking, it will likely be more logical. The downside is that I may potentially offend someone as I make not be considering emotional aspects in my thought process.</p>
-    <p>As shown in section B (green area), there is room for improvement in my organisation and planning. I do plan and organise tasks but I think I often put more focus on what I am doing at the time instead of thinking or planning ahead.</p>
+    <p><img src="images/HBDI Thinking Profile.jpg" alt="HBDI Test Result" width="1000" id="hbdi"/></p>
+    <p>The HBDI test is designed to identify your thinking preferences. These two graphs show my thinking style normally (left graph) and under pressure (dotted line on right graph). There is very little difference between the results when under pressure or thinking normally which indicates that my thought process or thinking style is not overly impacted by being under pressure.<br/>
+    The emotional response (C - red section) is the lowest of the four which can be both good and bad. The good side is that I am not likely to be led by emotion in my thinking, it will likely be more logical. The downside is that I may potentially offend someone as I make not be considering emotional aspects in my thought process.<br/>
+    As shown in section B (green area), there is room for improvement in my organisation and planning. I do plan and organise tasks but I think I often put more focus on what I am doing at the time instead of thinking or planning ahead.</p>
+    <br/>
 
     <p>The results of these three tests show that I am very hands on, have a high level of creativity and am not overly impacted when under pressure. From the results I think there are areas I could work on such as potentially being stubborn and stuck in my ways or not being empathetic enough. Based off these results I think it shows that I can work well in a team setting as I have good problem-solving skills and like to get in and do things. I think I would be able to fill any role within a team quite easily.</p>
+    <br/>
 
 </body>
 </html>
