--- a/Profile.html
+++ b/Profile.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-  background-image: url('images/gray and white.jpg');
+  background-image: url('images/1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -18,16 +18,17 @@ body {
 </head>
 <body>
 
-  <p>Navigation</p>
-  <p> <a href="index.html">Home Page</a></p>
-  <p> <a href="Profile.html">My Profile</a></p>
-  <p> <a href="Job.html">My Ideal Job</a></p>
-  <p> <a href="Personality.html">My Personality Tests</a></p>
-  <p> <a href="Project.html">My Project Idea</a></p>
-  <p> <a href="References.html">References</a></p>
+  <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="Profile.html">My Profile</a></li>
+    <li><a href="Job.html">My Ideal Job</a></li>
+    <li><a href="Personality.html">My Personality Tests</a></li>
+    <li><a href="Project.html">My Project Idea</a></li>
+    <li><a href="References.html">References</a></li>
+  <ul>
 
-  <h1>My profile</h1>
-    <p>My name is David, and I am just beginning my university studies for the Bachelor of Information Technology. I currently work for a retail company where I am the stock controller and also look after health & safety. I also have an 11yr old black Labrador named Barney who still acts like he is about 6 months old.</p>
+  <h1>My Profile</h1>
+    <p><img src="images/barney.JPG" alt="Barney" width="200" id="barney"/>My name is David, and I am just beginning my university studies for the Bachelor of Information Technology. I currently work for a retail company where I am the stock controller and also look after health & safety.I also have an 11yr old black Labrador named Barney who still acts like he is about 6 months old.</p>
     <p>In my spare time I enjoy playing some video games or practicing the piano which I am still currently learning. I also have my open water scuba diving licence and have dived in a few interesting places such as Hawaii.</p>
     <p>My interest in IT started when I was in primary school. I enjoyed the small amount of time we would get to play on the class computer and when we were allowed, I would play on the library computers at lunch time. This developed further when I got into high school, where I had IT as a subject for my School Certificate (year 10) and Higher School Certificate (year 12). One of the requirements for the school certificate was doing work experience for 2 weeks toward the end of the year, which I chose to do at a local computer store. I got to help repair and build computers during my that time which I really enjoyed. They even told me to bring in my computer, which I had built, and we could tinker around with it. At home, whenever I had the chance, I would be playing around with our computer or fiddling with electronics. This is when I really decided that I would one day like to have a career somewhere in IT.</p>
     <p>I have never worked directly in an IT role but have had some experience with some aspects of IT. For a few years I worked at Dick Smith Electronics where I was one of the people that would trouble shoot or help fix customers computers instore. I was also a salesperson, so I had to have quite a lot of knowledge about different aspects of computers and technology.</p>
