--- a/References.html
+++ b/References.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-  background-image: url('images/gray and white.jpg');
+  background-image: url('images/1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -18,14 +18,35 @@ body {
 </head>
 <body>
 
-  <p>Navigation</p>
-  <p> <a href="index.html">Home Page</a></p>
-  <p> <a href="Profile.html">My Profile</a></p>
-  <p> <a href="Job.html">My Ideal Job</a></p>
-  <p> <a href="Personality.html">My Personality Tests</a></p>
-  <p> <a href="Project.html">My Project Idea</a></p>
-  <p> <a href="References.html">References</a></p>
+  <ul>
+    <li><a href="index.html">Home Page</a></li>
+    <li><a href="Profile.html">My Profile</a></li>
+    <li><a href="Job.html">My Ideal Job</a></li>
+    <li><a href="Personality.html">My Personality Tests</a></li>
+    <li><a href="Project.html">My Project Idea</a></li>
+    <li><a href="References.html">References</a></li>
+  <ul>
 
+<h1>References</h1>
+  <p>Raspberry Pi (n.d). Raspberry Pi OS [Online]. Available: https://www.raspberrypi.com/software/ [Accessed 10 September 2022].</p>
+  <p>Okoi, D. 2021. 20 Best Operating Systems You Can Run on Raspberry Pi in 2021 [Online]. Fossmint website. Available: https://www.fossmint.com/operating-systems-for-raspberry-pi/ [Accessed 10 September 2022]. </p>
+  <p>Best Programming Language for Raspberry Pi for Beginners [Online] (22 July 2021). Raspberry Pi Starterkits website. Available: https://www.raspberrypistarterkits.com/resources/best-programming-language-raspberry-pi/ [Accessed 10 September 2022].</p>
+  <p>PiFace Digital [Online] (9 August 2019). Raspberry Connect website. Available: https://www.raspberryconnect.com/projects/42-hardware-addons/124-piface-digital [Accessed 10 September 2022].</p>
+  <p>Dexter Industries (n.d). Connect to your Raspberry Pi with your Mobile/Tablet [Online]. Dexter Industries website. Available: https://www.dexterindustries.com/howto/walk-through-and-tutorial-on-how-to-connect-the-raspberry-pi-and-mobile-phone-connect-raspberry-pi-mobiletablet/ [Accessed 10 September 2022].</p>
+  <p>Personality Max (n.d). Free Personality Test [Online]. Personality Max Website. Available: https://personalitymax.com/personality-test/ [Accessed 4 September 2022].</p>
+  <p>Herrmann (n.d). The HBDI [Online]. Herrmann Website. Available: https://herrmann.com.au/hbdi/ [Accessed 4 September 2022].</p>
+  <p>16 Personalities (n.d). Free Personality Test [Online]. 16 Personalities Website. Available: https://www.16personalities.com/free-personality-test [Accessed 4 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Introduction [Online]. W3 Schools Website. Available: https://www.w3schools.com/html/html_intro.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Basic Examples [Online]. W3 Schools Website. Available: https://www.w3schools.com/html/html_basic.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Paragraphs [Online]. W3 Schools Website. Available: https://www.w3schools.com/html/html_paragraphs.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). CSS Tutorial [Online]. W3 Schools Website. Available: https://www.w3schools.com/css/default.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Background Images [Online]. W3 Schools Website. Available: https://www.w3schools.com/htmL/html_images_background.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). CSS Layout – Float and Clear [Online]. W3 Schools Website. Available: https://www.w3schools.com/Css/css_float.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Links [Online]. W3 Schools Website. Available: https://www.w3schools.com/html/html_links.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). HTML Text Formatting [Online]. W3 Schools Website. Available: https://www.w3schools.com/html/html_formatting.asp [Accessed 17 September 2022].</p>
+  <p>W3 Schools (n.d). CSS Navigation Bar [Online] W3 Schools Website. Available: https://www.w3schools.com/css/css_navbar.asp [Accessed 17 September 2022].</p>
+  <p>Jenner E (17 September 2020). Pexels Website. Multiple patterns of stripes on gray surface [Website background]. Available: https://www.pexels.com/photo/multiple-patterns-of-stripes-on-gray-surface-4252525/ [Accessed 17 September 2022].</p>
+  <p>Coolors (n.d). [Online] Coolors Website. Available: https://coolors.co/0a2463-0c81d5-fffaff-d8315b-1e1b18 [Accessed 17 September 2022].</p>
 
 </body>
 </html>
