--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-  background-image: url('images/gray and white.jpg');
+  background-image: url('images/1.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -20,11 +20,11 @@ body {
 <body>
 
 
-  <p style="font-size:22px;"><img src="images/Me.JPG" alt="Me" width="200" id="me"/> David Lardner<br/>
-  Student ID: s3971040<br/>
-  Student email: s3971040@student.rmit.edu.au<br/>
-  GitHub Public Repository URL: <a href="https://github.com/DaveL-ClassE/Assignment-1.git" target="_blank">https://github.com/DaveL-ClassE/Assignment-1.git</a><br/>
-  GitHub Pages URL: <a href="https://davel-classe.github.io/Assignment-1/" target="_blank">https://davel-classe.github.io/Assignment-1/</a></P>
+  <p><img src="images/Me.JPG" alt="Me" width="250" id="me"/> David Lardner</p>
+  <p>Student ID: s3971040</p>
+  <p>Student email: s3971040@student.rmit.edu.au</p>
+  <p>GitHub Public Repository URL: <a href="https://github.com/DaveL-ClassE/Assignment-1.git" target="_blank">https://github.com/DaveL-ClassE/Assignment-1.git</a></p>
+  <p>GitHub Pages URL: <a href="https://davel-classe.github.io/Assignment-1/" target="_blank">https://davel-classe.github.io/Assignment-1/</a></P>
 
 
 <br/>
@@ -34,12 +34,15 @@ body {
 <br/>
 <br/>
 <p>Welcome to my webpage for the first IIT Assignment.</p>
-<p> <a href="index.html">Home Page</a></p>
-<p> <a href="Profile.html">My Profile</a></p>
-<p> <a href="Job.html">My Ideal Job</a></p>
-<p> <a href="Personality.html">My Personality Tests</a></p>
-<p> <a href="Project.html">My Project Idea</a></p>
-<p> <a href="References.html">References</a></p>
+<ul>
+  <li><a href="index.html">Home Page</a></li>
+  <li><a href="Profile.html">My Profile</a></li>
+  <li><a href="Job.html">My Ideal Job</a></li>
+  <li><a href="Personality.html">My Personality Tests</a></li>
+  <li><a href="Project.html">My Project Idea</a></li>
+  <li><a href="References.html">References</a></li>
+<ul>
+
 
 </body>
 </html>
